# endeavor-takehome-backend

./: README.md  pyproject.toml
src/app/: __init__.py  client.py  config.py  main.py  models.py  responder.py  scheduler.py  sink.py
src/email_response_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/integration/: test_end_to_end.py
tests/unit/: test_config.py  test_models.py  test_scheduler.py  test_sink.py
