[project]
name = "email-response-system"
version = "0.1.0"
description = "Automated email response system for take-home assessment."
requires-python = ">=3.13"

# Core runtime dependencies
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
  "numpy>=1.26.0",
  "pydantic-settings>=2.1.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta" 